# PyZeta

./: .gitignore  MANIFEST.in  README.rst  asv.conf.json  pyproject.toml  setup.cfg
.github/workflows/: black.yml  build-codecov.yml  build.yml
docs/: conf.py  index.rst  intro.rst  teaser.ipynb
docs/_static/: experiments.md  layers.md  pyzeta_core_design.md  refs.bib
docs/faq/: aop_example.ipynb  faq.rst  geometry_example.ipynb  plugin_example.ipynb
docs/misc/: badges.rst  contributing.rst  getting_started.rst  intro.rst  origins.rst  release_notes.rst
docs/package_reference/: core.rst  experiments.rst  framework.rst  geometry.rst  package_reference.rst  persistence.rst  utils.rst  view.rst
docs/theory/: theory.rst
docs/user_guide/: user_guide.rst
pyzeta/core/distributions/: abstract_ruelle.py  ruelle_distribution.py
pyzeta/core/factories/: function_systems.py  integrals.py  map_systems.py  symbolics.py  zetas.py
pyzeta/core/pyzeta_types/: function_systems.py  general.py  integral_arguments.py  integrals.py  map_systems.py  special.py  symbolics.py  system_arguments.py  tables.py  zetas.py
pyzeta/core/symmetries/: symmetry_group.py  trivial_group.py
pyzeta/core/zetas/: abstract_wzeta.py  abstract_zeta.py  reduced_selberg.py  reduced_wzeta.py  selberg_zeta.py  wzeta.py
pyzeta/experiments/: experiment.py  runner.py  stage.py
pyzeta/framework/aop/: advice.py  (+6 more)
pyzeta/geometry/: constants.py  geodesic.py  geometry_exceptions.py  helpers.py  sl2r.py  su11.py  visuals.py
src/cli/: __main__.py
src/deprecated/: hypgeo.py
tests/: test_dummy.py
(+83 files in other folders)
