[metadata]
name = PyZeta
version = 0.1.0
author = Philipp Schuette
author_email = pschuet2@mail.uni-paderborn.de
description = Numerical package for the calculation and investigation of (dynamical) zeta functions
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Spectral-Analysis-UPB/PyZeta
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    cython
    matplotlib
    numba>=0.55.1
    scipy>=1.9.1
    bokeh
package_dir =
    = src
include_package_data = True

[options.package_data]
PyZEAL = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	pyzeta = cli.__main__:mainPyZeta

[options.extras_require]
dev =
	mypy
	mypy-extensions
	hypothesis
	flake8
	pytest
	pytest-cov
	docstr-coverage
	pylint
	isort
	sphinx
	nbsphinx
	sphinxcontrib-bibtex
	check-jsonschema
	black

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
ignore_missing_imports = True
show_error_codes = True

[tool:pytest]
junit_family = legacy
filterwarnings = ignore::DeprecationWarning
markers =
    slow: slow tests.

[flake8]
max-complexity = 10
ignore = E203, W503

[pycodestyle]
ignore = E203, W503
max-line-length = 79
statistics = true
